2017-06-13  Giacomo Nannicini  <nannicini@us.ibm.com>
	* rbfopt_refinement (init_trust_region): Now uses only n+1 points
	rather 2n+1 for the initial trust region model.
	* rbfopt_settings.py (RbfoptSettings): Changed default settings
	for eps_impr, refinement_frequency, max_stalled_cycles to favor
	local search.
	
2017-06-09  Giacomo Nannicini  <nannicini@us.ibm.com>
	Version 3.0.0 released. List of major changes:
	* Added: 
	Refinement phase for improved local search: see option
	refinement_frequency and new options that start with tr_.
	Support for Python 3.
	* Changed:
	OptAlgorithm is now called RbfoptAlgoritm.
	RbfSettings is now called RbfoptSettings.
	Automatic model selection is now active by default, using fast
	linear algebra routines.
	Rbf functions in module rbfopt_utils now use Numpy, triggering
	several code optimization changes and major improvement in
	iteration speed.
	Several default settings have been changed.
	* Removed:
	Module rbfopt_model_selection is no longer necessary.
	Option model_selection_solver is no longer necessary.
	Option max_stalled_obj_fun_impr is subsumed by eps_impr.
	Cython modules and setup.py have been removed.

2017-06-08  Giacomo Nannicini  <nannicini@us.ibm.com>
	* rbfopt_utils.py (get_model_quality_estimate)
	(get_best_rbf_model): Functions moved to this module from the
	former model_selection module.	
	* rbfopt_model_selection.py: Module removed.
	* rbfopt_settings.py (RbfoptSettings): Many default settings have
	been updated, most notably rbf is now set to auto, and some
	settings have been deleted.
	
2017-06-03  Giacomo Nannicini  <nannicini@us.ibm.com>
	* rbfopt_utils.py: Major optimizations in the computation of
	radial basis functions.
	* setup.py: File removed, since there is no longer a speed
	advantage using Cython and compilation is therefore not necessary.
	
2017-05-31  Giacomo Nannicini  <nannicini@us.ibm.com>
	* rbfopt_refinement.py: The module provides functions to