@@ -1,1 +1,1 @@
-RBFOpt version 3.0.0
+RBFOpt version 3.0.1
